--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "null-loader": "^0.1.1",
     "open": "0.0.5",
     "phantomjs-prebuilt": "^2.0.0",
+    "pubsub-js": "^1.6.0",
     "react-addons-test-utils": "^15.0.0",
     "react-hot-loader": "^1.2.9",
     "react-router-dom": "^4.2.2",
