--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint": "^3.0.0",
     "eslint-loader": "^1.0.0",
     "eslint-plugin-react": "^6.0.0",
+    "fetch-jsonp": "^1.1.3",
     "file-loader": "^0.9.0",
     "glob": "^7.0.0",
     "isparta-instrumenter-loader": "^1.0.0",
